WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85371
Web Inspector: TypeError: Cannot call method 'createLiveLocation' of undefined
https://bugs.webkit.org/show_bug.cgi?id=85371
Summary
Web Inspector: TypeError: Cannot call method 'createLiveLocation' of undefined
Yury Semikhatsky
Reported
2012-05-02 06:31:35 PDT
1. Somehow trigger pause but the callstack is empty. I set pause on next event. Then I trigger an event but I'm not sure how. The exception halted my devtools on devtools. [3304:3304:96368756993:ERROR:CONSOLE(360)] "Uncaught TypeError: Cannot call method 'createLiveLocation' of undefined", source: chrome-devtools://devtools/ScriptsPanel.js (360) Upstreaming Chromium issue:
http://code.google.com/p/chromium/issues/detail?id=125859
Attachments
Patch
(5.42 KB, patch)
2012-05-02 06:36 PDT
,
Yury Semikhatsky
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2012-05-02 06:36:30 PDT
Created
attachment 139799
[details]
Patch
Pavel Feldman
Comment 2
2012-05-02 06:41:48 PDT
Comment on
attachment 139799
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=139799&action=review
> Source/WebKit/chromium/ChangeLog:7 > + corrent script data which means that context debug id should be already set on
current or correct ?
> Source/WebKit/chromium/src/WebDevToolsAgentPrivate.h:45 > + // preprocessing tha should happen before a first script is evaluated in
consider changing to "... that needs to happen before the first script is evaluated in this context should be done here" ?
Yury Semikhatsky
Comment 3
2012-05-02 06:59:30 PDT
(In reply to
comment #2
)
> (From update of
attachment 139799
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=139799&action=review
> > > Source/WebKit/chromium/ChangeLog:7 > > + corrent script data which means that context debug id should be already set on > > current or correct ? >
correct. Fixed.
> > Source/WebKit/chromium/src/WebDevToolsAgentPrivate.h:45 > > + // preprocessing tha should happen before a first script is evaluated in > > consider changing to "... that needs to happen before the first script is evaluated in this context should be done here" ?
Done.
Yury Semikhatsky
Comment 4
2012-05-02 07:09:26 PDT
Committed
r115827
: <
http://trac.webkit.org/changeset/115827
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug