Web Inspector: TypeError: Cannot call method 'createLiveLocation' of undefined https://bugs.webkit.org/show_bug.cgi?id=85371

Standard extension scripts injected to the Chromium background page should have
correct script data which means that context debug id should be already set on
the context where they are compiled before the compilation. This patch moves
assignment of context debug id earlier where it is known that no scripts have
been evaluated in the context.

Reviewed by Pavel Feldman.

* src/FrameLoaderClientImpl.cpp:
(WebKit::FrameLoaderClientImpl::dispatchDidClearWindowObjectInWorld):
(WebKit::FrameLoaderClientImpl::didCreateScriptContext):
* src/WebDevToolsAgentImpl.cpp:
(WebKit::WebDevToolsAgentImpl::didCreateScriptContext):
* src/WebDevToolsAgentImpl.h:
(WebDevToolsAgentImpl):
* src/WebDevToolsAgentPrivate.h:
(WebDevToolsAgentPrivate):

Canonical link: https://commits.webkit.org/102910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115827 268f45cc-cd09-0410-ab3c-d52691b4dbfc